fix: refactor API routes and add word endpoint
These changes include fetching and saving word data, updating article data, and handling POST requests.

--- a/app/globals.css
+++ b/app/globals.css
@@ -48,6 +48,10 @@
   background-color: transparent !important;
 }
 
+.wmde-markdown ul {
+  list-style-type: disc !important;
+}
+
 .wmde-markdown p {
   margin-bottom: 8px !important;
 }
