--- a/app/globals.css
+++ b/app/globals.css
@@ -48,7 +48,7 @@
   background-color: transparent !important;
 }
 
-.wmde-markdown ul {
+.wmde-markdown ul, .markdown-body ul {
   list-style-type: disc !important;
 }
 
