--- a/app/globals.css
+++ b/app/globals.css
@@ -35,7 +35,7 @@
 
 @layer components {
   .highlight {
-    @apply relative underline inline-flex justify-center underline-offset-2 decoration-dotted decoration-primary;
+    @apply relative underline inline-flex justify-center underline-offset-2 decoration-dotted decoration-primary !mb-0;
   }
   .ttip {
     @apply absolute opacity-0 pointer-events-none transition-opacity -top-7 whitespace-nowrap h-max bg-base-200 w-max px-4 py-1 flex flex-col font-semibold rounded-xl text-sm;
