--- a/app/globals.css
+++ b/app/globals.css
@@ -36,6 +36,18 @@
   font-family: "SUIT";
 }
 
+*::-webkit-scrollbar{
+  width: 8px;
+}
+
+*::-webkit-scrollbar-thumb{
+  background-color: black;
+}
+
+*::-webkit-scrollbar-track{
+  background-color: rgba(0,0,0,0);
+}
+
 .w-md-editor {
   box-shadow: none !important;
 }
